--- a/Bike_sharing_predictions.ipynb
+++ b/Bike_sharing_predictions.ipynb
@@ -295,7 +295,7 @@
       "test_unique_1 (__main__.TestPassed) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 8 tests in 0.313s\n",
+      "Ran 8 tests in 0.308s\n",
       "\n",
       "OK\n"
      ]
@@ -303,7 +303,7 @@
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x10f49ca00>"
+       "<unittest.main.TestProgram at 0x11c7ecd30>"
       ]
      },
      "execution_count": 5,
@@ -492,7 +492,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qx/bdlxtnn15xg42mxf3d1962000000gn/T/ipykernel_49678/407664588.py:11: MatplotlibDeprecationWarning: Auto-removal of overlapping axes is deprecated since 3.6 and will be removed two minor releases later; explicitly call ax.remove() as needed.\n",
+      "/var/folders/qx/bdlxtnn15xg42mxf3d1962000000gn/T/ipykernel_17134/407664588.py:11: MatplotlibDeprecationWarning: Auto-removal of overlapping axes is deprecated since 3.6 and will be removed two minor releases later; explicitly call ax.remove() as needed.\n",
       "  ax = plt.subplot(projection='polar')\n"
      ]
     },
@@ -676,8 +676,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean absolute error: 21.31%\n",
-      "R2 score: 0.96%\n"
+      "Mean absolute error: 21.307340\n",
+      "R2 score: 0.962993\n"
      ]
     }
    ],
@@ -686,8 +686,8 @@
     "\n",
     "from sklearn.metrics import mean_absolute_error, r2_score\n",
     "\n",
-    "print(\"Mean absolute error: %.2f%%\" % mean_absolute_error(y_valid, grid_pred))\n",
-    "print(\"R2 score: %.2f%%\" % r2_score(y_valid, grid_pred))"
+    "print(\"Mean absolute error: %f\" % mean_absolute_error(y_valid, grid_pred))\n",
+    "print(\"R2 score: %f\" % r2_score(y_valid, grid_pred))"
    ]
   },
   {
